dataset1235/2025-2/1153765216/users/4118477972/executions/3138746197_2149359571.log
== SUBMISSION (2025-08-14 19:16:44)
-- CODE: 
numero = 90
print(numero)
numero = -55
print(nuero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nuero)
          ^^^^^
NameError: name 'nuero' is not defined. Did you mean: 'numero'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nuero)
          ^^^^^
NameError: name 'nuero' is not defined. Did you mean: 'numero'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:17:33)
-- CODE: 
numero = 90
print(numero)
numero = -55
print(numero)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
-55
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
-55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:18:21)
-- CODE: 
numero = 90
print(numero)
numero = -55
print(numero)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
-55
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
-55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:17:50)
-- CODE: 
numero = 90
print(numero)
numero = -55
print(numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
-55
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
-55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:18:39)
-- CODE: 
numero = 90
print(numero)
numero = - 55
print(numero)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
-55
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
-55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:19:13)
-- CODE: 
numero = 90
print(numero)
numero = numero - 55
print(numero)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:17:11)
-- CODE: 
numero = 90
print(numero)
numero = -55
print(numero)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
-55
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
-55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
